Fix the subject column in change tables to truncate when too long
Because the text is actually inside a gwt Hyperlink object its down
inside of a div, not the td directly.  We need to apply the font
controls onto the div, otherwise the div overrides them and we don't
get the change subject to truncate nicely when its too long for the
available screen space.

--- a/appjar/src/main/java/com/google/gerrit/public/Gerrit.css
+++ b/appjar/src/main/java/com/google/gerrit/public/Gerrit.css
@@ -252,7 +252,7 @@
   text-align: right;
 }
 
-.gerrit-ChangeTable .C_SUBJECT {
+.gerrit-ChangeTable .C_SUBJECT div {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
